--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<tr height="" bgcolor="#FFFFDD" align="center">
 		<td width="10%"><strong>대구</strong></td>
 		<td width="90%" align="left">
-			<ul><li><a href="https://yeyak.daegu.go.kr/yeyak/camp/campListView2.dogo.kr/yeyak/camp/campListView.do?memId=B0000054" target="_blank">금호강 오토캠핑장</a>(이동시간: 17분)</li></ul>
+			<ul><li><a href="https://yeyak.daegu.go.kr/yeyak/camp/campListView2.do" target="_blank">금호강 오토캠핑장</a>(이동시간: 17분)</li></ul>
 			<ul><li><a href="https://camp.xticket.kr/web/main?shopEncode=f27ad3485cf140b64341e2cc975c376d14561a12aca07349ae393d97379882c7" target="_blank">달서별빛캠프 캠핑장</a>(이동시간: 22분)</li></ul>
 			<ul><li><a href="https://www.suseong.kr/camping/reservation/reservationState.do" target="_blank">수성구청 진밭골 야영장</a>(이동시간: 25분)</li></ul>
 			<ul><li><a href="https://www.dssiseol.or.kr/pages/yeyak_sports/page.html?mc=1186" target="_blank">강변오토캠핑장</a>(이동시간: 46분)</li></ul>
